# Multem-3

./: .gitignore  .gitmodules  2D_inf_spheres.py  CMakeLists.txt  README.md  clean.sh  start_simulation.py
examples/: A_multem.txt  R_multem.txt  calculate_MB_BIC_Dirac_Cone.py  fort.10  fort.16  fort.8  multem3  multipole_regime_parameters.ini  smuthi_comparison.py  visualisation_lib.py
examples/CPC_draft/: PRB 2017 Swiecicki.py  create_figure_to_publication.py  fort.8  multem2  multem2_wo_lapack
examples/CPC_draft/data/fig2a/: akxy=0.05_0.0.txt  akxy=0.1_0.0.txt
examples/CPC_draft/data/fig2b/: lmax=13.txt  lmax=7.txt
examples/CPC_draft/data/fig2c/: error_wo_lapack.txt
examples/CPC_draft/data/fig4/: 650_9.txt  750_7.txt  900_9.txt  sintheta.txt
examples/CPC_draft/data/fig5_old/: lmax=13_rmax=12_d=1.0.txt  lmax=13_rmax=15_d=0.6.txt  lmax=13_rmax=15_d=1.0.txt  lmax=13_rmax=16_d=0.6.txt  lmax=13_rmax=20_d=0.6.txt  lmax=13_rmax=21_d=1.0.txt  lmax=13_rmax=23_d=1.0.txt  lmax=13_rmax=29_d=0.3.txt  lmax=13_rmax=31_d=1.0.txt  lmax=13_rmax=7_d=0.3.txt  lmax=13_rmax=7_d=0.6.txt  lmax=13_rmax=7_d=1.0.txt  lmax=4_rmax=14_d=1.0.txt  lmax=4_rmax=16_d=0.3.txt  lmax=4_rmax=20_d=1.0.txt  lmax=4_rmax=29_d=0.3.txt  lmax=4_rmax=29_d=1.0.txt  lmax=4_rmax=7_d=0.3.txt
examples/CPC_draft/rmax_issue/lmax=10_rmax=2/: T.txt
examples/CPC_draft/rmax_issue/lmax=10_rmax=20/: T.txt
examples/CPC_draft/rmax_issue/lmax=10_rmax=30/: R.txt
examples/CPC_draft/rmax_issue/lmax=4_rmax=2/: T.txt
examples/CPC_draft/rmax_issue/lmax=4_rmax=20/: R.txt
examples/CompPhysComm2024_submission/: CPC_calculate_data.py  create_figure_to_publication.py  create_typical_design_figure.pov  prepare_binaries.sh
examples/CompPhysComm2024_submission/multem_different_versions/multem2/: fort.10  multem2  new_multem.f
examples/CompPhysComm2024_submission/multem_different_versions/multem2_lapack/: fort.16  fort.8
examples/CompPhysComm2024_submission/multem_different_versions/multem2_lapack/multem2_lapack/: multem2_with_lapack  new_multem.f
examples/CompPhysComm_2023/: CPC_calculate_data.py  calculate_MB_BIC_Dirac_Cone.py  calculating_lib.py  calculating_spectra.py  create_figure_to_publication.py  fort.10  fort.16  multem2_with_lapack  multem3  multem3_cerf  multem3_cerf_my  multipole_regime_parameters.ini
examples/CompPhysComm_2023/data/fig2a/: akxy=0.01_0.0.txt  akxy=0.0_0.05.txt
examples/CompPhysComm_2023/data/fig2b/: lmax=10.txt  lmax=4.txt
examples/CompPhysComm_2023/data/fig2c/: T.txt  error_with_lapack.txt  error_with_lapack_and_faddeeva.txt
examples/CompPhysComm_2023/data/fig3/: MIT_im_err.txt  MIT_re_err.txt  fort.1  multem2_im_err.txt  multem2_re_err.txt  multem2_regimes.txt  plot_errors.py  x.txt  y.txt
examples/CompPhysComm_2023/data/fig4/: 650_7.txt  750_8.txt  900_7.txt
examples/CompPhysComm_2023/data/fig5_old/: lmax=13_rmax=13_d=0.6.txt  lmax=13_rmax=14_d=1.0.txt  lmax=13_rmax=16_d=0.3.txt  lmax=13_rmax=16_d=1.0.txt  lmax=13_rmax=19_d=1.0.txt  lmax=13_rmax=26_d=1.0.txt  lmax=13_rmax=29_d=0.6.txt  lmax=13_rmax=29_d=1.0.txt  lmax=13_rmax=9_d=0.6.txt  lmax=4_rmax=10_d=1.0.txt  lmax=4_rmax=13_d=0.6.txt  lmax=4_rmax=16_d=0.6.txt  lmax=4_rmax=18_d=1.0.txt  lmax=4_rmax=19_d=1.0.txt  lmax=4_rmax=20_d=0.6.txt  lmax=4_rmax=24_d=1.0.txt  lmax=4_rmax=29_d=0.6.txt  lmax=4_rmax=7_d=0.6.txt  lmax=4_rmax=7_d=1.0.txt  lmax=4_rmax=9_d=0.6.txt
examples/CompPhysComm_2023/rmax_issue/lmax=10_rmax=2/: R.txt
examples/CompPhysComm_2023/rmax_issue/lmax=10_rmax=7/: omega.txt
examples/CompPhysComm_2023/rmax_issue/lmax=13_rmax=2/: T.txt
examples/CompPhysComm_2023/rmax_issue/lmax=13_rmax=20/: R.txt
examples/CompPhysComm_2023/rmax_issue/lmax=13_rmax=30/: T.txt
examples/CompPhysComm_2023/rmax_issue/lmax=13_rmax=7/: R.txt
examples/CompPhysComm_2023/rmax_issue/lmax=4_rmax=2/: R.txt
examples/CompPhysComm_2023/rmax_issue/lmax=4_rmax=20/: T.txt
examples/CompPhysComm_2023/rmax_issue/lmax=7_rmax=30/: R.txt  T.txt
examples/CompPhysComm_2023/rmax_issue/lmax=7_rmax=7/: R.txt  T.txt
examples/smuthi_multem_comparison/all_multipoles/: T_all.txt  T_t1_l1.txt  T_t1_l2.txt
examples/smuthi_multem_comparison/all_multipoles/l=1/: T_multem.txt
examples/smuthi_multem_comparison/all_multipoles/l=2/: T_multem.txt  T_smuthi.txt
examples/smuthi_multem_comparison/electric/l=1/: R_multem.txt  T_multem.txt  T_smuthi.txt
examples/smuthi_multem_comparison/electric/l=1/m=-1-0-1/: T_multem.txt
examples/smuthi_multem_comparison/magnetic/l=1/: R_multem.txt  T_multem.txt
examples/smuthi_multem_comparison/magnetic/l=1/m=-1-0-1/: T_multem.txt  T_smuthi.txt  T_smuthi1.txt  theta.txt
examples/smuthi_multem_comparison/magnetic/l=1/m=0/: T_multem.txt  T_smuthi.txt
examples/smuthi_multem_comparison/magnetic/l=1/m=1/: T_multem.txt
examples/smuthi_multem_comparison/magnetic/l=3/: R_multem.txt
examples/smuthi_multem_comparison/magnetic/l=3/m=0/: R_1.txt  (+11 more)
lapack_wrapper/: CMakeLists.txt  dense_solve_impl.f90
simulation/: multem3  start_simulation.py
src/lib/: CMakeLists.txt  libmultem2b.f90  multem_blas.f90  multem_mod.f90  multipole_regime_parameters.f90
src/python_simulations/: multem3_py_calculating.py
src/tests/: CMakeLists.txt  get_multipole_combination_test.f90
src/tests/reference_data/: get_multipole_combination_reference.f90
(+50 files in other folders)
